Added one more example of using selectors and calculating weights.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       тільки при наведенні (вага 32) </a>
   </p>
 
+  <div> 
+    <article>First article</article>
+    <article>Застосовується до другого розділу (article) який знаходиться в div. (вага 12) </article>
+  </div>
+
 </body>
 
 </html>
