added one more example

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <article>Застосовується до другого розділу (article) який знаходиться в div. (вага 12) </article>
   </div>
 
+  <p class="black-white">
+    <b>
+      <em>Застосовується до всіх тегів em, що знаходяться під тегом b, в тезі p з класом black-white</em>
+    </b>
+  </p>
+
 </body>
 
 </html>
